--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -35,4 +35,13 @@
     <dimen name="detail_screen_location_marginStartEnd">8dp</dimen>
     <dimen name="detail_screen_location_marginTop">16dp</dimen>
     <dimen name="detail_screen_location_text_size">18sp</dimen>
+
+    <dimen name="detail_screen_btn_view_on_map_marginStartEnd">8dp</dimen>
+    <dimen name="detail_screen_btn_view_on_map_marginTop">16dp</dimen>
+    <dimen name="detail_screen_btn_view_on_map_PaddingTopBottom">8dp</dimen>
+    <dimen name="detail_screen_btn_view_on_map_text_size">18sp</dimen>
+
+    <dimen name="add_place_select_current_location_marginTop">5dp</dimen>
+    <dimen name="add_place_select_current_location_padding">10dp</dimen>
+    <dimen name="add_place_select_current_location_textsize">16sp</dimen>
 </resources>
