--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:visibility="gone"
         tools:visibility="gone"/>
 
-    <TextureView
+    <TextView
         android:id="@+id/tv_no_records_available"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
